tests/errors/0_wrong_indent.f
      PROGRAM UNDECLARED_ASSIGN
    INTEGER A
      A = 1
      END
